# chickenstats-blog

./: CNAME  about.html  about.md  index.css  index.html  index.md  listings.json  projects.html  projects.html.md  pyproject.toml  readme.html  readme.html.md  robots.txt  search.json  sitemap.xml
blog/: index.html  index.md  index.xml
blog/posts/nashville_predators/checking_in_2025/: index.html  index.md
blog/posts/tennessee_titans/titans_qbs/: index.html  index.md
blog/posts/tutorials/four_nations/: index.html  index.md
blog/posts/tutorials/gsax/: index.html  index.md
blog/posts/tutorials/lollipop/: index.html  index.md
blog/posts/tutorials/monte_carlo/: index.html  index.md
blog/posts/tutorials/network/: index.html  index.md
blog/posts/tutorials/rink_maps/: index.html  index.md
nbs/: _quarto.yml  nbdev.yml  readme.ipynb
nbs/blog/posts/tutorials/monte_carlo/: index.ipynb
projects/: chickenandstats.html  chickenandstats.html.md  chickenstats-api.html  chickenstats-api.html.md  chickenstats-xg.html  chickenstats-xg.html.md  chickenstats.html  chickenstats.html.md
site_libs/bootstrap/: bootstrap-a11dba048d54369a0ba32d76f1e8cac9.min.css  bootstrap-dark-f8fd5410986283f6e731e000554be693.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-1c1dc2379bbd5ddb0c8048b1f32dc819.css  quarto-syntax-highlighting-dark-aaca84e9d91d68d6a6992246725cf62d.css
stylesheets/: chickenstats.css
