[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "chickenstats-blog"
authors = [{name = "chickenandstats", email = "chicken@chickenandstats.com"}]
dynamic = ["version"]
description = "Blog for chickenstats"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = []

[project.urls]
Repository = "https://github.com/chickenstats/chickenstats-blog"
Documentation = "https://blog.chickenstats.com/"

[project.entry-points.nbdev]
chickenstats_blog = "chickenstats_blog._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "chickenstats_blog.__version__"}

[tool.setuptools.packages.find]
include = ["chickenstats_blog"]

[tool.nbdev]
readme_nb = 'nbs/readme.ipynb'
jupyter_hooks = true
custom_sidebar = true

[tool.ruff]
include = [
    "pyproject.toml",
    "nbs/**/*.py",
    "nbs/**/*.ipynb",
    ]
extend-include = ["*.ipynb"]
exclude = [
    "*__init__.py",
    ]
target-version = "py313"
fix = true
unsafe-fixes = true
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "D", "UP", "B"]
fixable = ["ALL"]
ignore = ["F401", "D100", "B017", "B007", "E501"]

[tool.ruff.lint.per-file-ignores]
"nbs/index.qmd.py" = ["D205"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.uv]
package = false
default-groups = ["core", "viz", "sports", "data", "dev"]

[dependency-groups]
core = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab-quarto>=0.3.5",
    "nbdev>=2.4.6",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "quarto>=0.1.0",
]
viz = [
    "bokeh>=3.8.0",
    "hockey-rink>=1.1.4",
    "plotly>=6.3.1",
    "seaborn>=0.13.2",
]
sports = [
    "chickenstats>=1.7.9.23",
    "nflreadpy>=0.1.5",
]
data = [
    "boto3>=1.43.2",
    "census>=0.8.24",
    "deltalake>=1.5.1",
    "osmnx>=2.0.7",
    "polars-st>=0.4.3",
    "us>=3.2.0",
]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.15.11",
]
